# winpods

./: README.md
apps/desktop-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/desktop-ui/electron/: main.cjs  preload.cjs
apps/desktop-ui/public/ascii/: airpods-4.txt  airpods-max.txt  airpods-pro-2.txt  beats-fit-pro.txt  manifest.json
apps/desktop-ui/scripts/: stage-dev.cjs
apps/desktop-ui/src/: App.tsx  styles.css  vite-env.d.ts
crates/bluetooth/src/: utils.rs
crates/bluetooth/src/advertisement/: advertisement_watcher.rs
crates/desktop/: README.md
crates/desktop/src-tauri/: Cargo.toml
crates/desktop/src-tauri/src/: backend_service.rs  lib.rs  main.rs
