[package]
name = "desktop"
version = "0.1.11"
authors = ["sinanovicanes"]
edition = "2024"

[lib]
name = "desktop_lib"
crate-type = ["rlib"]

[[bin]]
name = "desktop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bluetooth = { path = "../../bluetooth" }
dirs = "6.0"
media = { path = "../../media" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utils = { path = "../../utils" }
